2002-08-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp: Fixed crash when calling
          Browser::loadURI.

        * src/openvrml/OpenVRML/field.cpp: Fixed const correctness
          issue in array_vector copy ctor.

2002-08-19  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Continue upating conformance test results.

2002-08-18  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,
          src/openvrml/OpenVRML/browser.cpp: Provide the resource URI to
          the parser in a parameter to the constructor.

2002-08-17  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp: If the Scene's parent is 0,
          then a relative reference will simply be passed to the stream
          loader as-is.  This should accommodate references that refer
          to the local file system. (The reference must still parse as
          a URI, so DOS-style file system references won't work.)

        * src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/field.h,
          src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/openvrml/OpenVRML/vrml97node.cpp: Modified implementation
          of the MF* types not to use a refcounted internal object.

2002-08-16  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/doc2.cpp,
          src/openvrml/OpenVRML/browser.cpp: Apparently gcc 2.95.3
          doesn't have basic_string<>::clear.

2002-08-13  Braden McDaniel  <braden@endoframe.com>

        * lib/antlr/config.hpp, src/openvrml/OpenVRML/field.cpp: Fixes
          to build with Irix 6.5 CC.

2002-08-12  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp: Workarounds for a bug in
          gcc 3.1.
